playground/kubernetes-yamls/spring-boot-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app-container
          image: ram1uj/my-spring-boot-app
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
