playground/kubernetes-yamls/spring-boot-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
spec:
  selector:
    app: spring-boot-app
  ports:
    - port: 5000
  type: NodePort
