playground/kubernetes-yamls/spring-boot-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-boot-app

spec:
  rules:
    - host: springbootapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-app
                port:
                  number: 5000
